--- a/signup.html
+++ b/signup.html
@@ -99,7 +99,7 @@
                 
                 <div class="pt-6 border-t border-white/10 flex items-center justify-between">
                     <p class="text-gray-300 font-medium">Already have an account?</p>
-                    <a href="login.html" class="bg-white/10 hover:bg-white/20 px-6 py-2 rounded-full font-bold transition-all border border-white/20">Sign In</a>
+                    <a href="index.html" class="bg-white/10 hover:bg-white/20 px-6 py-2 rounded-full font-bold transition-all border border-white/20">Sign In</a>
                 </div>
             </div>
         </div>
