--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <div class="space-y-4 pt-4">
                     
-                    <button onclick="window.location.href='index.html'" type="button" 
+                    <button onclick="window.location.href='home.html'" type="button" 
                             class="w-full py-4 bg-[#7257ff] hover:bg-[#5e44e6] text-white rounded-2xl font-bold text-lg shadow-lg shadow-purple-200 transition-all transform hover:-translate-y-1 active:scale-95">
                         LOGIN
                     </button>
